addding the find of longest sequence of main span and cleaning

--- a/CA1/CA1/Notebooks/main.ipynb
+++ b/CA1/CA1/Notebooks/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 149796.57it/s]\n"
+      "100%|██████████| 10/10 [00:00<00:00, 84733.41it/s]\n"
      ]
     }
    ],
@@ -39,13 +39,20 @@
     "\"\"\"getting the sentences and events\"\"\"\n",
     "\n",
     "# sentences = [input().strip().split()]\n",
-    "sentences = [\"گفتگوهای صلح اوکراین، فردا از سر گرفته خواهد شد.\".strip().split()]\n",
+    "sentences = [\"دو هفته از استعفای نخست وزیر بریتانیا می گذرد.\".strip().split()]\n",
     "events = [x.strip().split() for x in tqdm.tqdm(codecs.open(F'{path_dir}/Data/events.txt','rU','utf-8').readlines())]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Preprocessing functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,42 +84,22 @@
     "def lemmatize_input(sentences_, events_):\n",
     "    lemmatizer = Lemmatizer()\n",
     "\n",
-    "    sentences_lemmatied = [[lemmatizer.lemmatize(word) for word in sent if len(word) != 0] for sent in tqdm.tqdm(sentences_tokens)]\n",
-    "    events_lemmatied = [[lemmatizer.lemmatize(word) for word in sent if len(word) != 0] for sent in tqdm.tqdm(events_tokens)]\n",
+    "    sentences_lemmatied = [[lemmatizer.lemmatize(word) for word in sent if len(word) != 0] for sent in tqdm.tqdm(sentences_)]\n",
+    "    events_lemmatied = [[lemmatizer.lemmatize(word) for word in sent if len(word) != 0] for sent in tqdm.tqdm(events_)]\n",
     "\n",
     "    return sentences_lemmatied, events_lemmatied    \n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 61,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 5706.54it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 2779.53it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 4224.72it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 8867.45it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 15592.21it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 12799.22it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 79287.41it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 15141.89it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 78106.22it/s]\n"
-     ]
-    }
-   ],
    "source": [
-    "sentences_normalized, events_normalized = normalize_inputs(sentences, events)\n",
-    "sentences_tokenized, events_tokenized = tokenize_inputs(sentences_normalized, events_normalized)\n",
-    "sentences_lemmatized, events_lemmatized = lemmatize_input(sentences_tokenized, events_tokenized)"
+    "Connecting to farsnet API functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,79 +132,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "token = 'd428eab3-3b91-11eb-8a1e-080027d731c1'\n",
-    "username = '12356'\n",
-    "client_sense_service, client_synset_service = connect_to_fars_net(username, token)\n",
-    "get_synset_id(sentences_lemmatized, client_synset_service, token)"
+    "Finding similar event to each sentence functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:10<00:00, 10.20s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"getting the synset ids of the lemmatized text\"\"\"\n",
-    "\n",
-    "sentences_synset_id = [[client_synset_service.service.getSynsetsByWord(token, 'EXACT', word) for word in sent] for sent in tqdm.tqdm(sentences_lemmatied)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [01:52<00:00, 11.24s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"getting the synset ids of the lemmatized text\"\"\"\n",
-    "\n",
-    "events_synset_id = [[client_synset_service.service.getSynsetsByWord(token, 'EXACT', word) for word in sent] for sent in tqdm.tqdm(events_lemmatied)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 6307.22it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 31000.03it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"extracting the synset ids of the lemmatized text\"\"\"\n",
-    "\n",
-    "sentences_synset_id_list = [[[synset.id for synset in word] for word in sent] for sent in tqdm.tqdm(sentences_synset_id)]\n",
-    "events_synset_id_list = [[[synset.id for synset in word] for word in sent] for sent in tqdm.tqdm(events_synset_id)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,8 +230,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find longest sequence of words functions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00, 4161.02it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 4471.54it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 5516.64it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  5.39it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 10951.19it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 13953.11it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 96199.63it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 17189.77it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 51974.03it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentences_normalized, events_normalized = normalize_inputs(sentences, events)\n",
+    "sentences_tokenized, events_tokenized = tokenize_inputs(sentences_normalized, events_normalized)\n",
+    "sentences_lemmatized, events_lemmatized = lemmatize_input(sentences_tokenized, events_tokenized)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token = 'd428eb00-3b91-11eb-8a1e-080027d731c1'\n",
+    "username = '987654'\n",
+    "client_sense_service, client_synset_service = connect_to_fars_net(username, token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:11<00:00, 11.55s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"getting the synset ids of the lemmatized sentences\"\"\"\n",
+    "\n",
+    "sentences_synset_id = get_synset_id(sentences_lemmatized, client_synset_service, token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [01:51<00:00, 11.10s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"getting the synset ids of the lemmatized events\"\"\"\n",
+    "\n",
+    "events_synset_id = get_synset_id(events_lemmatized, client_synset_service, token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00, 10512.04it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 30840.47it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"extracting the synset ids of the lemmatized texts\"\"\"\n",
+    "\n",
+    "sentences_synset_id_list = [[[synset.id for synset in word] for word in sent] for sent in tqdm.tqdm(sentences_synset_id)]\n",
+    "events_synset_id_list = [[[synset.id for synset in word] for word in sent] for sent in tqdm.tqdm(events_synset_id)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,26 +353,125 @@
     "\n",
     "sentences_main_word_index = find_main_span(word_event_similarity)\n",
     "related_event = [np.argmax(sentence) for sentence in sentence_event_similarity]\n",
-    "main_word_span = convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokens)"
+    "main_word_span = convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokenized)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "related_event:  [4]\n",
-      "main_word_span [[0, 8]]\n"
+      "sentences_main_word_index:  [3]\n",
+      "related_event:  [3]\n",
+      "main_word_span [[11, 18]]\n"
      ]
     }
    ],
    "source": [
+    "print(\"sentences_main_word_index: \", sentences_main_word_index)\n",
     "print(\"related_event: \", related_event)\n",
     "print(\"main_word_span\", main_word_span)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tagger = POSTagger(model='../Resources/postagger.model')\n",
+    "\n",
+    "# def longest_noun_sequence(sent_,index_):\n",
+    " \n",
+    "#     tags_=[]\n",
+    "#     string_=tagger.tag(sent_[index_:] )\n",
+    "#     for x in  string_:\n",
+    "#         tags_.append( x[1][0])\n",
+    "#     counter = 0\n",
+    "#     for i in range(len(tags_)):\n",
+    "#       if tags_[i] == 'N':\n",
+    "#         counter += 1\n",
+    "#       else:\n",
+    "#         break\n",
+    "      \n",
+    "#     return [' '.join(sent_).find(sent_[index_]), ' '.join(sent_).find(sent_[index_+counter-1]) + len(sent_[index_+counter-1])], ' '.join(sent_[index_ : index_ + counter])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tagger = POSTagger(model='../Resources/postagger.model')\n",
+    "\n",
+    "def longest_noun_sequence(sent_,index_):\n",
+    "    tags_=[]\n",
+    "    string_=tagger.tag(sent_[index_:] )\n",
+    "    for x in  string_:\n",
+    "        tags_.append( x[1][:1])\n",
+    "    listToStr = ''.join([str(elem) for elem in tags_])   \n",
+    "    tmp=0\n",
+    "    for i in range(0,len(listToStr)+1):\n",
+    "      if listToStr[i:i+1]=='N':\n",
+    "        tmp+=1\n",
+    "      else:\n",
+    "        break\n",
+    "\n",
+    "    listToStr2 = ' '.join([str(elem) for elem in sent_[:index_]])  \n",
+    "    listToStr3 = ' '.join([str(elem) for elem in sent_[:index_+tmp]])  \n",
+    "    return [sent_[index_:index_+tmp],[len(listToStr2)+1,len(listToStr3)]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "span_list = longest_noun_sequence(sentences_tokenized[0], related_event[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "استعفای نخست وزیر بریتانیا می\n"
+     ]
+    }
+   ],
+   "source": [
+    "span_list = [longest_noun_sequence(sentences_tokenized[sent], sentences_main_word_index[sent]) for sent in range(len(sentences_tokenized))]\n",
+    "print(' '.join(sentences_tokenized[0])[span_list[0][1][0]:span_list[0][1][1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'استعفای نخست وزیر بریتانیا می'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join(sentences_tokenized[0])[span_list[0][1][0]:span_list[0][1][1]]"
    ]
   }
  ],
