--- a/CA1/CA1/Notebooks/test.ipynb
+++ b/CA1/CA1/Notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,15 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:00<00:00, 76881.34it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 87199.67it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 139294.23it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 149796.57it/s]\n"
      ]
     }
    ],
@@ -50,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:00<00:00, 13672.12it/s]\n",
-      "100%|██████████| 9/9 [00:00<00:00, 4639.15it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 5726.01it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 9975.88it/s]\n",
+      "100%|██████████| 9/9 [00:00<00:00, 3728.64it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 5844.91it/s]\n"
      ]
     }
    ],
@@ -80,17 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:00<00:00, 46.39it/s]\n",
-      "100%|██████████| 9/9 [00:00<00:00, 76881.34it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 24132.93it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 174037.51it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 63.81it/s]\n",
+      "100%|██████████| 9/9 [00:00<00:00, 106634.85it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 9169.88it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 135300.13it/s]\n"
      ]
     }
    ],
@@ -110,15 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:00<00:00, 41300.59it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 51337.87it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 39527.47it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 69672.82it/s]\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,14 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [02:05<00:00, 13.99s/it]\n"
+      "100%|██████████| 9/9 [00:07<00:00,  1.23it/s]\n"
      ]
     }
    ],
@@ -186,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [01:51<00:00, 11.17s/it]\n"
+      "100%|██████████| 10/10 [00:06<00:00,  1.48it/s]\n"
      ]
     }
    ],
@@ -205,15 +205,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:00<00:00, 16571.00it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 21879.52it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 29399.33it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 56450.93it/s]\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,16 +340,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "related_event:  [4, 3, 2, 8, 1, 9, 0, 5, 7]\n",
+      "related_event:  [5, 5, 5, 5, 5, 5, 5, 5, 5]\n",
       "\n",
-      "main_word_span [[0, 8], [11, 18], [21, 26], [11, 17], [27, 33], [40, 46], [0, 5], [33, 38], [51, 54]]\n",
+      "main_word_span [[0, 8], [0, 2], [0, 2], [0, 5], [0, 5], [0, 2], [0, 5], [0, 6], [0, 2]]\n",
       "\n"
      ]
     }
@@ -360,6 +360,22 @@
     "print(\"main_word_span\", convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokens))\n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tagger = POSTagger(model='../resources/postagger.model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
