--- a/CA1/CA1/Notebooks/main.ipynb
+++ b/CA1/CA1/Notebooks/main.ipynb
@@ -1,49 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path_dir = \"../\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random \n",
-    "import numpy as np\n",
-    "import nltk\n",
-    "import codecs\n",
-    "import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 84733.41it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"getting the sentences and events\"\"\"\n",
-    "\n",
-    "# sentences = [input().strip().split()]\n",
-    "sentences = [\"دو هفته از استعفای نخست وزیر بریتانیا می گذرد.\".strip().split()]\n",
-    "events = [x.strip().split() for x in tqdm.tqdm(codecs.open(F'{path_dir}/Data/events.txt','rU','utf-8').readlines())]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -240,171 +197,6 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 4161.02it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 4471.54it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 5516.64it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  5.39it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 10951.19it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 13953.11it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 96199.63it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 17189.77it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 51974.03it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "sentences_normalized, events_normalized = normalize_inputs(sentences, events)\n",
-    "sentences_tokenized, events_tokenized = tokenize_inputs(sentences_normalized, events_normalized)\n",
-    "sentences_lemmatized, events_lemmatized = lemmatize_input(sentences_tokenized, events_tokenized)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "token = 'd428eb00-3b91-11eb-8a1e-080027d731c1'\n",
-    "username = '987654'\n",
-    "client_sense_service, client_synset_service = connect_to_fars_net(username, token)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:11<00:00, 11.55s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"getting the synset ids of the lemmatized sentences\"\"\"\n",
-    "\n",
-    "sentences_synset_id = get_synset_id(sentences_lemmatized, client_synset_service, token)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [01:51<00:00, 11.10s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"getting the synset ids of the lemmatized events\"\"\"\n",
-    "\n",
-    "events_synset_id = get_synset_id(events_lemmatized, client_synset_service, token)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 10512.04it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 30840.47it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"\"\"extracting the synset ids of the lemmatized texts\"\"\"\n",
-    "\n",
-    "sentences_synset_id_list = [[[synset.id for synset in word] for word in sent] for sent in tqdm.tqdm(sentences_synset_id)]\n",
-    "events_synset_id_list = [[[synset.id for synset in word] for word in sent] for sent in tqdm.tqdm(events_synset_id)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "similarity_list = count_similar_sentences(sentences_synset_id_list, events_synset_id_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "word_event_similarity = calculate_word_event_similarity(similarity_list)\n",
-    "sentence_event_similarity = calculate_sentence_event_similarity(similarity_list)\n",
-    "\n",
-    "sentences_main_word_index = find_main_span(word_event_similarity)\n",
-    "related_event = [np.argmax(sentence) for sentence in sentence_event_similarity]\n",
-    "main_word_span = convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokenized)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sentences_main_word_index:  [3]\n",
-      "related_event:  [3]\n",
-      "main_word_span [[11, 18]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"sentences_main_word_index: \", sentences_main_word_index)\n",
-    "print(\"related_event: \", related_event)\n",
-    "print(\"main_word_span\", main_word_span)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tagger = POSTagger(model='../Resources/postagger.model')\n",
-    "\n",
-    "# def longest_noun_sequence(sent_,index_):\n",
-    " \n",
-    "#     tags_=[]\n",
-    "#     string_=tagger.tag(sent_[index_:] )\n",
-    "#     for x in  string_:\n",
-    "#         tags_.append( x[1][0])\n",
-    "#     counter = 0\n",
-    "#     for i in range(len(tags_)):\n",
-    "#       if tags_[i] == 'N':\n",
-    "#         counter += 1\n",
-    "#       else:\n",
-    "#         break\n",
-    "      \n",
-    "#     return [' '.join(sent_).find(sent_[index_]), ' '.join(sent_).find(sent_[index_+counter-1]) + len(sent_[index_+counter-1])], ' '.join(sent_[index_ : index_ + counter])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
    "outputs": [],
    "source": [
     "tagger = POSTagger(model='../Resources/postagger.model')\n",
@@ -428,50 +220,118 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 73,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "span_list = longest_noun_sequence(sentences_tokenized[0], related_event[0])"
+    "Main function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random \n",
+    "import numpy as np\n",
+    "import nltk\n",
+    "import codecs\n",
+    "import tqdm\n",
+    "\n",
+    "def run(input_string_):\n",
+    "    \"\"\"getting the sentences and events\"\"\"\n",
+    "    path_dir = \"../\"\n",
+    "    sentences = [input_string_.strip().split()]\n",
+    "    events = [x.strip().split() for x in tqdm.tqdm(codecs.open(F'{path_dir}/Data/events.txt','rU','utf-8').readlines())]\n",
+    "\n",
+    "    sentences_normalized, events_normalized = normalize_inputs(sentences, events)\n",
+    "    sentences_tokenized, events_tokenized = tokenize_inputs(sentences_normalized, events_normalized)\n",
+    "    sentences_lemmatized, events_lemmatized = lemmatize_input(sentences_tokenized, events_tokenized)\n",
+    "\n",
+    "    token = 'd428eb00-3b91-11eb-8a1e-080027d731c1'\n",
+    "    username = '987654'\n",
+    "    client_sense_service, client_synset_service = connect_to_fars_net(username, token)\n",
+    "\n",
+    "    \"\"\"getting the synset ids of the lemmatized sentences\"\"\"\n",
+    "    sentences_synset_id = get_synset_id(sentences_lemmatized, client_synset_service, token)\n",
+    "\n",
+    "    \"\"\"getting the synset ids of the lemmatized events\"\"\"\n",
+    "    events_synset_id = get_synset_id(events_lemmatized, client_synset_service, token)\n",
+    "\n",
+    "    \"\"\"extracting the synset ids of the lemmatized texts\"\"\"\n",
+    "    sentences_synset_id_list = [[[synset.id for synset in word] for word in sent] for sent in tqdm.tqdm(sentences_synset_id)]\n",
+    "    events_synset_id_list = [[[synset.id for synset in word] for word in sent] for sent in tqdm.tqdm(events_synset_id)]\n",
+    "\n",
+    "    similarity_list = count_similar_sentences(sentences_synset_id_list, events_synset_id_list)\n",
+    "\n",
+    "    word_event_similarity = calculate_word_event_similarity(similarity_list)\n",
+    "    sentence_event_similarity = calculate_sentence_event_similarity(similarity_list)\n",
+    "\n",
+    "    sentences_main_word_index = find_main_span(word_event_similarity)\n",
+    "    related_event = [np.argmax(sentence) for sentence in sentence_event_similarity]\n",
+    "    main_word_span = convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokenized)\n",
+    "\n",
+    "    print(\"sentences_main_word_index: \", sentences_main_word_index)\n",
+    "    print(\"related_event: \", related_event)\n",
+    "    print(\"main_word_span\", main_word_span)\n",
+    "\n",
+    "    span_list = [longest_noun_sequence(sentences_tokenized[sent], sentences_main_word_index[sent]) for sent in range(len(sentences_tokenized))]\n",
+    "    print(' '.join(sentences_tokenized[0])[span_list[0][1][0]:span_list[0][1][1]])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running the code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:00<00:00, 104335.92it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 2811.20it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 3813.00it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 3669.88it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00,  6.57it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 16980.99it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 13490.85it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 112147.17it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 11275.01it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 64231.30it/s]\n",
+      "100%|██████████| 1/1 [00:12<00:00, 12.03s/it]\n",
+      "100%|██████████| 10/10 [02:32<00:00, 15.23s/it]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 9218.25it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 22684.18it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "sentences_main_word_index:  [3]\n",
+      "related_event:  [3]\n",
+      "main_word_span [[11, 18]]\n",
       "استعفای نخست وزیر بریتانیا می\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "span_list = [longest_noun_sequence(sentences_tokenized[sent], sentences_main_word_index[sent]) for sent in range(len(sentences_tokenized))]\n",
-    "print(' '.join(sentences_tokenized[0])[span_list[0][1][0]:span_list[0][1][1]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'استعفای نخست وزیر بریتانیا می'"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "' '.join(sentences_tokenized[0])[span_list[0][1][0]:span_list[0][1][1]]"
+    "run(\"دو هفته از استعفای نخست وزیر بریتانیا می گذرد.\")"
    ]
   }
  ],
